Use javapackager Gradle plugin instead of javafx-gradle-plugin, which doesn't support Gradle versions above 5